more text is more good
Signed-off-by: ygelfand <yuri@shlitz.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KubeSteward</title>
+    <title>KubeSteward | Kubernetes Audit Redefined</title>
+    <meta name="description" content="Secure, audited terminal and SQL access for Kubernetes. KubeSteward provides zero-trust proxying, real-time auditing, and policy enforcement for your clusters." />
   </head>
   <body>
     <div id="root"></div>
