visual/content updates
Signed-off-by: ygelfand <yuri@shlitz.com>

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/kube_steward_transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KubeSteward | Kubernetes Audit Redefined</title>
+    <title>KubeSteward | Privileged Access Redefined</title>
     <meta name="description" content="Secure, audited terminal and SQL access for Kubernetes. KubeSteward provides zero-trust proxying, real-time auditing, and policy enforcement for your clusters." />
   </head>
   <body>
